--- a/css/styles.css
+++ b/css/styles.css
@@ -90,10 +90,11 @@ p {
     color: var(--hover-focus-color);
 }
 .menu {
-    
+    color:var(--text-color);
     padding: 24px 0px ;
     display:block;
     margin-left: 40px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current{
     position: relative;
@@ -101,6 +102,7 @@ p {
 .current::after {
     position: absolute;
     content: "";
+    background-color: var(--hover-focus-color);
     width:100%;
     top: 48px;
     border-radius: 2px;
@@ -109,10 +111,7 @@ p {
 	left: 0;
     right: 0;
 }
-.current:hover:after {
-    background-color: var(--hover-focus-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
+
 .header-nav
 {   font-style: normal;
     display: inline;
@@ -120,7 +119,9 @@ p {
 .header-nav:not(:last-child){
     margin-right: 40px;
 }
-.contact{ padding: 24px 0px;}
+.contact{ padding: 24px 0px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .contact:hover,
 .contact:focus {
@@ -166,6 +167,7 @@ p {
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover,
 .btn:focus {
@@ -230,6 +232,7 @@ p {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     padding: 12px 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .portfolio-btn:hover {
@@ -238,20 +241,25 @@ p {
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-color:var(--btn-active-colore)
 }
+.list{
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .list-oport {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
+    
 }
-.exampl{ border: 1px solid #E7E9FC;
-border-top: none;
-padding-left: 16px;
-padding-top: 16px;
-padding-bottom: 32px;
+.exampl{ 
+    border: 1px solid #E7E9FC;
+    border-top: none;
+    padding-left: 16px;
+    padding-top: 16px;
+    padding-bottom: 32px;
 }
 .list:is(:hover,:focus){
-        box-shadow:
+    box-shadow:
     0px 1px 6px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -332,6 +340,7 @@ padding-bottom: 32px;
     justify-content: center;
     background-color: #4D5AE5;
     border-radius: 50%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .team-soc-link:is(:hover,:focus){
@@ -377,6 +386,7 @@ padding-bottom: 32px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cust-icon{
     fill:  #8E8F99;
@@ -425,6 +435,7 @@ padding-bottom: 32px;
     justify-content: center;
     background-color:rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .title-soc {
     color:#ffffff;
