--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,9 @@ p {
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:hover,
 .btn:focus {
@@ -232,7 +234,10 @@ p {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     padding: 12px 24px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .portfolio-btn:hover {
@@ -242,14 +247,13 @@ p {
     border-color:var(--btn-active-colore)
 }
 .list{
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-oport {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    
 }
 .exampl{ 
     border: 1px solid #E7E9FC;
@@ -264,6 +268,23 @@ p {
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+.oport-top{
+    position: relative;
+}
+.app-text{
+    position: absolute;
+    top: 0;
+    color:rgba(244, 244, 253, 1) ;
+    font-style: 16px;
+    line-height: 1.5;
+    background-color: #4D5AE5;
+    background-blend-mode: soft-light;
+    padding:40px;
+    height: 100%;
+    width: 100%;
+}
+
 /*end portfolio*/
 
 /*main*/
@@ -340,7 +361,7 @@ p {
     justify-content: center;
     background-color: #4D5AE5;
     border-radius: 50%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .team-soc-link:is(:hover,:focus){
@@ -386,10 +407,11 @@ p {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cust-icon{
     fill:  #8E8F99;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .custom-link:is(:hover, :focus) .cust-icon {
     fill:#404BBF;}
@@ -435,7 +457,7 @@ p {
     justify-content: center;
     background-color:rgba(255, 255, 255, 0.1);
     border-radius: 50%;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .title-soc {
     color:#ffffff;
