--- a/css/styles.css
+++ b/css/styles.css
@@ -263,14 +263,18 @@ p {
     padding-bottom: 32px;
 }
 .list:is(:hover,:focus){
+    transform: translateY(0%);
     box-shadow:
     0px 1px 6px rgba(46, 47, 66, 0.08), 
     0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
+.list:is(:hover,:focus) .app-text {
+    transform: translateY(0%);
+}
 .oport-top{
     position: relative;
+    overflow: hidden ;
 }
 .app-text{
     position: absolute;
@@ -283,6 +287,8 @@ p {
     padding:40px;
     height: 100%;
     width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*end portfolio*/
