--- a/css/styles.css
+++ b/css/styles.css
@@ -484,3 +484,18 @@ p {
     padding: 0;
     margin-left: 120px;
 }
+/*modal window*/
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+}
+.modal {
+    width: 408px;
+    min-height: 576px;
+}
+.modal-close {
+}
