--- a/css/styles.css
+++ b/css/styles.css
@@ -493,9 +493,32 @@ p {
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
 }
+.is-hidden{
+    opacity: 0 ;
+    visibility: hidden;
+    pointer-events: none;
+}
 .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 408px;
     min-height: 576px;
+    background-color: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    padding: 24px;
 }
 .modal-close {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    border: 1px solid #9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
 }
