--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,7 @@ p {
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) , visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 .is-hidden{
     opacity: 0 ;
@@ -502,7 +503,7 @@ p {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scaleY(1);
     width: 408px;
     min-height: 576px;
     background-color: #FCFCFC;
@@ -511,6 +512,10 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 24px;
+    transition: transform 250ms linear;
+}
+.backdrop.is-hidden.modal{
+    transform: translate(-50%, -50%) scaleY(0);
 }
 .modal-close {
     width: 24px;
@@ -521,4 +526,7 @@ p {
     justify-content: center;
     align-items: center;
     margin-left: auto;
+}
+.modal-close:is(:hover:focus){
+    background-color: var(--hover-focus-color);
 }
