--- a/css/styles.css
+++ b/css/styles.css
@@ -503,7 +503,7 @@ p {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scaleY(1);
+    transform: translate(-50%, -50%);
     width: 408px;
     min-height: 576px;
     background-color: #FCFCFC;
@@ -512,11 +512,8 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 24px;
-    transition: transform 250ms linear;
 }
-.backdrop.is-hidden.modal{
-    transform: translate(-50%, -50%) scaleY(0);
-}
+
 .modal-close {
     width: 24px;
     height: 24px;
