--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ p {
     top: 48px;
     border-radius: 2px;
     height: 4px;
-    margin-top: 24px;
+    margin-top: 22px;
 	left: 0;
     right: 0;
 }
@@ -234,7 +234,8 @@ p {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     padding: 12px 24px;
-    transition: 
+    transition:
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -523,6 +524,12 @@ p {
     justify-content: center;
     align-items: center;
     margin-left: auto;
+    background-color: rgba(231, 233, 252, 1);
+}
+.icon-clos{
+stroke-width: 0;
+stroke: currentColor;
+fill: currentColor;
 }
 .modal-close:is(:hover:focus){
     background-color: var(--hover-focus-color);
