--- a/css/styles.css
+++ b/css/styles.css
@@ -525,9 +525,17 @@ p {
     justify-content: center;
     align-items: center;
     margin-left: auto;
-    color: rgba(231, 233, 252, 1);
+    background-color: rgba(231, 233, 252, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close:is(:hover:focus){
-    color: var(--btn-active-colore);
+.icon-clos{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close:is(:hover,:focus){
+    background-color: var(--btn-active-colore);
     border-color:var(--btn-active-colore)
+}
+
+.modal-close:is(:hover,:focus) .icon-clos{
+fill:#FFFFFF;
 }
