--- a/css/styles.css
+++ b/css/styles.css
@@ -500,11 +500,14 @@ p {
     visibility: hidden;
     pointer-events: none;
 }
+.backdrop .is-hidden .modal{
+    transform: translate(-50%, -50%) scale(0.2);
+}
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1);
     width: 408px;
     min-height: 576px;
     background-color: #FCFCFC;
@@ -513,6 +516,7 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 24px;
+    transition: transform 1s linear;
 }
 
 .modal-close {
