--- a/css/styles.css
+++ b/css/styles.css
@@ -500,9 +500,7 @@ p {
     visibility: hidden;
     pointer-events: none;
 }
-.backdrop .is-hidden .modal{
-    transform: translate(-50%, -50%) scale(0.2);
-}
+
 .modal {
     position: absolute;
     top: 50%;
@@ -516,9 +514,11 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 24px;
-    transition: transform 1s linear;
+     transition: translate 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.backdrop.is-hidden.modal{
+    transform: translate(-50%, -50%) scale(0.2);
+}
 .modal-close {
     cursor: pointer;
     width: 24px;
