--- a/css/styles.css
+++ b/css/styles.css
@@ -499,13 +499,13 @@ p {
     opacity: 0 ;
     visibility: hidden;
     pointer-events: none;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .modal {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
     width: 408px;
     min-height: 576px;
     background-color: #FCFCFC;
@@ -514,10 +514,9 @@ p {
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     padding: 24px;
-    transition: translate 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop.is-hidden.modal{
-    transform: translate(-50%, -50%) scale(0.2);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close {
     cursor: pointer;
